--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-    <h1 class="fahad">Hello KD!</h1>
+    <h1 class = "KD">Hello KD!</h1>
     <p>This is a Github repository.</p>
-	
 </body>
 
 </html>
